test_suite/alan-2022-examples/failing/002330_mutation.alan
source ekq7a begin get JYjf if 52] end
